[tool.poetry]
name = "WhereAmAI"
version = "0.1.0"
description = ""
authors = ["Max Frings <max.frings@klarna.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
openai = "^1.37.0"
python-dotenv = "^1.0.1"
anthropic = "^0.31.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


